crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__redirections__parse_process_substitution_read.snap
---
source: cash-parser/src/parser/tests/redirections.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "diff <(sort file1) <(sort file2)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "diff",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  ProcessSubstitution(Read, SubshellCommand(
                    list: CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "sort",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "file1",
                                  loc: "[location]",
                                )),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ]),
                    loc: "[location]",
                  )),
                  ProcessSubstitution(Read, SubshellCommand(
                    list: CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "sort",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "file2",
                                  loc: "[location]",
                                )),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ]),
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
